# video-transcript-translation

./: .gitignore  README.md  pyproject.toml  run.sh  test_transcribe.py  transcribe.py
