[project]
name = "video-transcript-translation"
version = "1.0.0"
description = "Transcribe video/audio files using OpenAI's Whisper API"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (call external APIs)",
]
